test/istiod-remote/configmap-galley.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: istiod-galley
  namespace: istio-system
  labels:
    release: istiod
data:
  galley.json: |
      {
      "EnableServiceDiscovery": true,
      "SinkAddress": "meshconfig.googleapis.com:443",
      "SinkAuthMode": "GOOGLE",
      "ExcludedResourceKinds": ["Pod", "Node", "Endpoints"],
      "SinkMeta": ["project_id=costin-istio"]
      }
