test/istiod-remote/kustomization.yaml
# Allow install of istiod using kubectl -k
# The deployment is not generated with helm template, and is self contained.
# "cluster" resources must be applied first.
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - configmap-injection.yaml
  - configmap-mesh.yaml
  - configmap-values.yaml
  - configmap-galley.yaml

commonLabels:
  app: istiod-remote

nameSuffix: -remote

bases:
  #- github.com/istio/installer/kustomize/istiod
  - ../../kustomize/istiod

images:
  - name: gcr.io/istio-testing/istiod
    newName: gcr.io/costin-istio/istiod

patchesStrategicMerge:
  - patch-volumes.yaml
