test/istiod-remote/patch.yaml
# This needs to be automated by the patch - service name and env label are all based on the label.
# Note that istiod name gets translated
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: istiod
webhooks:
  - name: sidecar-injector.istio.io
    clientConfig:
      service:
        name: istiod-remote
    namespaceSelector:
      matchLabels:
        istio-env: istiod-remote
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istiod
spec:
  # Required: we only use a single galley uploader.
  replicas: 1
  template:
    spec:
      volumes:
        - name: inject
          configMap:
            name: inject
            optional: true
        - name: values
          configMap:
            name: values
            optional: true
        - name: mesh
          configMap:
            name: istiod-mesh
            optional: true
        - name: galley
          configMap:
            name: istiod-galley
            optional: true
        - name: google-cloud-key
          secret:
            secretName: google-cloud-key
            optional: true
      containers:
        - name: discovery
          env:
            - name: PROJECT_ID
              value: costin-istio
            - name: GOOGLE_APPLICATION_CREDENTIALS
              value: /var/secrets/google/key.json
            - name: ISTIOD_ADDR
              value: istiod-remote.istio-system.svc:15012
            - name: WEBHOOK
              value: istiod-remote
          volumeMounts:
            - name: inject
              mountPath: /var/lib/istio/inject
              readOnly: true
            - name: galley
              mountPath: /var/lib/istio/galley
              readOnly: true
            - name: values
              mountPath: /var/lib/istio/install
              readOnly: true
            - name: mesh
              mountPath: /var/lib/istio/config
              readOnly: true
            - mountPath: /var/secrets/google
              name: google-cloud-key
